--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "mongoose": "^7.0.1",
     "multer": "^1.4.5-lts.1",
     "nodemon": "^2.0.20",
+    "querystring": "^0.2.1",
     "socket.io": "^4.6.1"
   }
 }
